compiler/arsenal-boot/crates/arsenal_parse/tests/snapshots/corpus__pass_corpus@003_fn_one_arg.gw.snap
---
source: crates/arsenal_parse/tests/corpus.rs
expression: dump_text
---
Module @1:1..2:1
  FnDecl @1:1..2:1
    KwFn `fn` @1:1..1:3
    Ident `id` @1:4..1:6
    ParamList @1:6..1:15
      LParen `(` @1:6..1:7
      Param @1:7..1:13
        Ident `x` @1:7..1:8
        Colon `:` @1:8..1:9
        PathType @1:10..1:13
          Ident `i32` @1:10..1:13
      RParen `)` @1:13..1:14
    RetType @1:15..1:22
      Arrow `->` @1:15..1:17
      PathType @1:18..1:22
        Ident `i32` @1:18..1:21
    Block @1:22..2:1
      LBrace `{` @1:22..1:23
      ExprStmt @1:24..1:34
        ReturnExpr @1:24..1:32
          KwReturn `return` @1:24..1:30
          PathExpr @1:31..1:32
            Ident `x` @1:31..1:32
        Semi `;` @1:32..1:33
      RBrace `}` @1:34..1:35
