compiler/arsenal-boot/crates/arsenal_parse/tests/snapshots/corpus__pass_corpus@005_fn_no_ret_type.gw.snap
---
source: crates/arsenal_parse/tests/corpus.rs
expression: dump_text
---
Module @1:1..2:1
  FnDecl @1:1..2:1
    KwFn `fn` @1:1..1:3
    Ident `nothing` @1:4..1:11
    ParamList @1:11..1:14
      LParen `(` @1:11..1:12
      RParen `)` @1:12..1:13
    Block @1:14..2:1
      LBrace `{` @1:14..1:15
      RBrace `}` @1:15..1:16
